lint and tweaks (#1000)
