# agent/agentUi/src/api/models/FailureDetail.ts
@@ -1,0 +1,97 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * agent/agentGrpc/agent.proto
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: version not set
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface FailureDetail
+ */
+export interface FailureDetail {
+    /**
+     * 
+     * @type {string}
+     * @memberof FailureDetail
+     */
+    failureId?: string;
+    /**
+     * 
+     * @type {number}
+     * @memberof FailureDetail
+     */
+    failureCount?: number;
+    /**
+     * 
+     * @type {string}
+     * @memberof FailureDetail
+     */
+    lastError?: string;
+    /**
+     * 
+     * @type {Date}
+     * @memberof FailureDetail
+     */
+    lastFailure?: Date;
+    /**
+     * 
+     * @type {Date}
+     * @memberof FailureDetail
+     */
+    nextRetry?: Date;
+}
+
+/**
+ * Check if a given object implements the FailureDetail interface.
+ */
+export function instanceOfFailureDetail(value: object): value is FailureDetail {
+    return true;
+}
+
+export function FailureDetailFromJSON(json: any): FailureDetail {
+    return FailureDetailFromJSONTyped(json, false);
+}
+
+export function FailureDetailFromJSONTyped(json: any, ignoreDiscriminator: boolean): FailureDetail {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'failureId': json['failureId'] == null ? undefined : json['failureId'],
+        'failureCount': json['failureCount'] == null ? undefined : json['failureCount'],
+        'lastError': json['lastError'] == null ? undefined : json['lastError'],
+        'lastFailure': json['lastFailure'] == null ? undefined : (new Date(json['lastFailure'])),
+        'nextRetry': json['nextRetry'] == null ? undefined : (new Date(json['nextRetry'])),
+    };
+}
+
+export function FailureDetailToJSON(json: any): FailureDetail {
+    return FailureDetailToJSONTyped(json, false);
+}
+
+export function FailureDetailToJSONTyped(value?: FailureDetail | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'failureId': value['failureId'],
+        'failureCount': value['failureCount'],
+        'lastError': value['lastError'],
+        'lastFailure': value['lastFailure'] == null ? undefined : ((value['lastFailure']).toISOString()),
+        'nextRetry': value['nextRetry'] == null ? undefined : ((value['nextRetry']).toISOString()),
+    };
+}
+
